--- a/about/index.html
+++ b/about/index.html
@@ -46,6 +46,7 @@
 
   <link rel="stylesheet" href="../main.css" />
   <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -183,29 +184,46 @@
           <div class="blankHXS"></div>
         </div>
       </div>
-      <div class="Grid Grid--full">
-        <div class="Grid-cel Grey700">
-          <h3>As a UX designer working in a startup with a small team, I consistently strive to deliver seamless user
-            experiences. My expertise lies in optimizing team management and payments for improved usability in B2B web
-            apps. Additionally, I have successfully streamlined service bookings on B2C mobile platforms, resulting in
-            increased satisfaction and conversions for users</h3>
-          <h3>
-            Moreover, my exceptional ability is showcased through vickywang.me, a website that exemplifies my skills in
-            art, design, and technology. With meticulous attention to detail, I have crafted an attractive and
-            user-friendly website that leaves a lasting impression. By <a href="https://github.com/vicky-wyq"
-              class="textUnderline" target="_blank">implementing</a> responsive concepts using HTML/CSS/JS, I have
-            ensured a seamless experience across various devices. The positive feedback received from users and
-            professionals serves as a validation of the significant impact my designs have made.
-          </h3>
 
-          <h3>Overall, my expertise in digital experience design, encompassing UI/UX and <a href="/architecture/"
-              class="textUnderline">architectural design</a>, underscores my ability to craft intuitive interfaces,
-            optimize user experiences, and think creatively across
-            both digital and physical design realms. I am dedicated to constantly pushing the boundaries of design
-            excellence, harnessing my skills to deliver impactful solutions that resonate with users and transform
-            spaces.</h3>
+      <div class="rowVW centerVH">
+        <div class="widthMax">
+          <div class="Grid-cell">
+
+            <h3>As a UX designer working in a startup with a small team, I consistently strive to deliver seamless user
+              experiences. My expertise lies in optimizing team management and payments for improved usability in B2B
+              web
+              apps. Additionally, I have successfully streamlined service bookings on B2C mobile platforms, resulting in
+              increased satisfaction and conversions for users</h3>
+            <h3>
+              Moreover, my exceptional ability is showcased through vickywang.me, a website that exemplifies my skills
+              in
+              art, design, and technology. With meticulous attention to detail, I have crafted an attractive and
+              user-friendly website that leaves a lasting impression. By <a href="https://github.com/vicky-wyq"
+                class="textUnderline" target="_blank">implementing</a> responsive concepts using HTML/CSS/JS, I have
+              ensured a seamless experience across various devices. The positive feedback received from users and
+              professionals serves as a validation of the significant impact my designs have made.
+            </h3>
+
+            <h3>Overall, my expertise in digital experience design, encompassing UI/UX and <a href="/architecture/"
+                class="textUnderline">architectural design</a>, underscores my ability to craft intuitive interfaces,
+              optimize user experiences, and think creatively across
+              both digital and physical design realms. I am dedicated to constantly pushing the boundaries of design
+              excellence, harnessing my skills to deliver impactful solutions that resonate with users and transform
+              spaces.</h3>
+          </div>
+        </div>
+        <div class="paddingleft">
+          <div class="widthFitContent">
+            <img class="widthS" src="../image/me_1.jpg" alt="icon arrow">
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid Grid--full">
+        <div class="Grid-cell Grey700">
 
         </div>
+
       </div>
     </div>
 
@@ -221,6 +239,7 @@
   <div class="blankHXS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
+
       <div class="Grid-cell" data-aos="fade-down-right">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
@@ -510,21 +529,21 @@
     </div>
   </div>
   <!-- About me -->
+  <!-- message -->
   <div class="blankHL"></div>
-
-  <!-- my photo -->
-  <div class="containerTQ">
-    <img src="../image/me.jpg" alt="right">
-    <div class="centeredTQ colorAPPOINTABg paddingS border-radius">
-      <h3 data-aos="fade-up" class="Grey900">
-        Thank you for dropping by! If you have any feedback about this site or would like to get in touch, please feel
-        free to shoot me an <a href="mailto:vickyw.design@gmail.com" class="textUnderline"> email</a>&#33;
-      </h3>
+  <div class="Grid Grid--full u-textCenter">
+    <div class="Grid-cell">
+      <div data-aos="fade-up">
+        <h4 class="element">
+          Thank you for dropping by! If you have any feedback about this site or would like to get in touch, please feel
+          free to shoot me an <a href="mailto:vickyw.design@gmail.com" class="textUnderline"> email</a>&#33; </h4>
+      </div>
       <a href="/" class=""><img class="widthXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-
     </div>
   </div>
-  <!-- my photo -->
+  <!-- message -->
+  <div class="blankHL"></div>
+
   <!--back to top-->
   <button id="myBtn" title="Back to top">
     <div id="dad">
@@ -538,31 +557,52 @@
   </button>
   <!--back to top-->
 </body>
-<!--footer-->
-<footer class="GreyBg100">
-  <div class="element">
-    <div class="footer">
-      <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-      <div class="footer-right">
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
-        </a>
-        <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-          <img class="footer-logo" src="../icon/in.svg" alt="LinkedIn">
-        </a>
-        <a target="_blank" href="https://github.com/vicky-wyq">
-          <img class="footer-logo" src="../icon/git.svg" alt="GitHub" title="GitHub">
-        </a>
-        <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-          <img class="footer-logo" src="../icon/Codepen.svg" alt="CodePen">
-        </a>
-        <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-          <img class="footer-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram">
-        </a>
+  <!--footer-->
+  <footer class="GreyBg100">
+    <div class="blankHM"></div>
+    <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4> &#169; 2023 &#8212; VICKY WANG</h4>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+          <div class="Grid-cell">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly">
+                <img title="Copy Email to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
+                  src="../icon/mail.svg" alt="Mail">
+                <p class="clickIconCopy">vickyw.design@gmail.com </p>
+              </button>
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub"
+                title="GitHub">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+                title="Instagram">
+            </a>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
-<!--footer-->
-
+    <div class="blankHM"></div>
+    <div class="blankPhone"></div>
+    <!--footer-->
 </html>
