--- a/about/index.html
+++ b/about/index.html
@@ -189,27 +189,16 @@
         <div class="widthMax">
           <div class="Grid-cell">
 
-            <h3>As a UX designer working in a startup with a small team, I consistently strive to deliver seamless user
-              experiences. My expertise lies in optimizing team management and payments for improved usability in B2B
-              web
-              apps. Additionally, I have successfully streamlined service bookings on B2C mobile platforms, resulting in
-              increased satisfaction and conversions for users</h3>
-            <h3>
-              Moreover, my exceptional ability is showcased through vickywang.me, a website that exemplifies my skills
-              in
-              art, design, and technology. With meticulous attention to detail, I have crafted an attractive and
-              user-friendly website that leaves a lasting impression. By <a href="https://github.com/vicky-wyq"
-                class="textUnderline" target="_blank">implementing</a> responsive concepts using HTML/CSS/JS, I have
-              ensured a seamless experience across various devices. The positive feedback received from users and
-              professionals serves as a validation of the significant impact my designs have made.
+            <h3>As a UX designer, I possess a diverse range of skills and have gained experience in startup
+              environments. I am fully involved in every aspect of the design process and continuously aim to create
+              seamless user experiences that align with business objectives. My approach emphasizes simplicity, using
+              the fewest design elements necessary to address core issues effectively.</h3>
+            <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art of crafting
+              user-centric interfaces and in appreciating the finer details of everyday life.
             </h3>
-
-            <h3>Overall, my expertise in digital experience design, encompassing UI/UX and <a href="/architecture/"
-                class="textUnderline">architectural design</a>, underscores my ability to craft intuitive interfaces,
-              optimize user experiences, and think creatively across
-              both digital and physical design realms. I am dedicated to constantly pushing the boundaries of design
-              excellence, harnessing my skills to deliver impactful solutions that resonate with users and transform
-              spaces.</h3>
+            <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters smoother
+              collaboration with developers but also deepens my understanding of design, ultimately driving
+              productivity.</h3>
           </div>
         </div>
         <div class="paddingleft">
@@ -557,52 +546,52 @@
   </button>
   <!--back to top-->
 </body>
-  <!--footer-->
-  <footer class="GreyBg100">
-    <div class="blankHM"></div>
-    <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4> &#169; 2023 &#8212; VICKY WANG</h4>
-        </div>
+<!--footer-->
+<footer class="GreyBg100">
+  <div class="blankHM"></div>
+  <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
+    <div class="Grid-cell">
+      <div class="element">
+        <h4> &#169; 2023 &#8212; VICKY WANG</h4>
       </div>
-      <div class="Grid-cell">
-        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
-          <div class="Grid-cell">
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly">
-                <img title="Copy Email to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
-                  src="../icon/mail.svg" alt="Mail">
-                <p class="clickIconCopy">vickyw.design@gmail.com </p>
-              </button>
-            </div>
+    </div>
+    <div class="Grid-cell">
+      <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+        <div class="Grid-cell">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly">
+              <img title="Copy Email to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
+                src="../icon/mail.svg" alt="Mail">
+              <p class="clickIconCopy">vickyw.design@gmail.com </p>
+            </button>
           </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-            </a>
-          </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub"
-                title="GitHub">
-            </a>
-          </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-            </a>
-          </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
-                title="Instagram">
-            </a>
-          </div>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+          </a>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://github.com/vicky-wyq">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub" title="GitHub">
+          </a>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+          </a>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram"
+              title="Instagram">
+          </a>
         </div>
       </div>
     </div>
-    <div class="blankHM"></div>
-    <div class="blankPhone"></div>
-    <!--footer-->
+  </div>
+  <div class="blankHM"></div>
+  <div class="blankPhone"></div>
+  <!--footer-->
+
 </html>
