--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
   <meta name="author" content="Vicky W.">
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User Interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Vicky W. | UX Designer | Projects">
-  <meta property="og:description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  <meta property="og:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
   <meta property="og:url" content="https://vickywang.me/">
   <meta property="og:site_name" content="Vicky's Website">
@@ -31,8 +29,7 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
   <meta property="twitter:title" content="Vicky W. | UX Designer | Projects">
-  <meta property="twitter:description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  <meta property="twitter:description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
 ">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg">
 
@@ -367,17 +364,33 @@
                   <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
                   <div class="img__description">
                     <div class="input-field">
-                      <label for="password">Password</label>
-                      <input type="password" id="password" placeholder="Enter password">
+                      <div class="column">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" placeholder="Enter password">
+
+                        <div class="pwIncorrectHeight">
+                          <span id="pwIncorrect">Password is incorrect </span>
+                        </div>
+                      </div>
+
+
                       <button class="passwordArr" type="submit">
                         <img src="./icon/arrow-forward.svg" alt="Enter">
                         <!--  <i class="fas fa-chevron-right"></i> -->
                       </button>
-                      <div class="pwIncorrectHeight">
-                        <span id="pwIncorrect">Password is incorrect </span>
-                      </div>
+
+
+
+
+
+
+
                     </div>
+
+
+
                   </div>
+
                   <div class="element zTop">
                     <div class="element">
                       <h5>Password is required </h5>
