--- a/index.html
+++ b/index.html
@@ -366,31 +366,18 @@
                     <div class="input-field">
                       <div class="column">
                         <label for="password">Password</label>
-                        <input type="password" id="password" placeholder="Enter password">
+                        <input class="PWinput" type="password" id="password" placeholder="Enter password">
 
                         <div class="pwIncorrectHeight">
                           <span id="pwIncorrect">Password is incorrect </span>
                         </div>
                       </div>
-
-
                       <button class="passwordArr" type="submit">
                         <img src="./icon/arrow-forward.svg" alt="Enter">
                         <!--  <i class="fas fa-chevron-right"></i> -->
                       </button>
-
-
-
-
-
-
-
                     </div>
-
-
-
                   </div>
-
                   <div class="element zTop">
                     <div class="element">
                       <h5>Password is required </h5>
@@ -399,7 +386,6 @@
                     </div>
                   </div>
                 </div>
-
               </div>
             </a>
           </div>
