--- a/design_system/index.html
+++ b/design_system/index.html
@@ -2650,7 +2650,8 @@
 
                 <div class="column">
                   <label for="password">Password</label>
-                  <input type="password" id="password" placeholder="Enter password">
+
+                  <input class="PWinput" type="password" id="password" placeholder="Enter password">
   
                   <div class="pwIncorrectHeight">
                     <span id="pwIncorrect">Password is incorrect </span>
