--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                     <div class="input-field">
                       <div class="column">
                         <label for="password">Password</label>
-                        <input class="PWinput" type="password" id="password" placeholder="Enter password">
+                        <input class="PWinputLanding" type="password" id="password" placeholder="Enter password">
 
                         <div class="pwIncorrectHeight">
                           <span id="pwIncorrect">Password is incorrect </span>
