--- a/design_system/index.html
+++ b/design_system/index.html
@@ -285,8 +285,15 @@
       <div class="element">
 
         <h3><strong>Main goal</strong></h3>
-        <h4>To leverage my skills as a UX designer in learning and applying basic coding techniques, aiming to develop a
-          user-friendly site that emphasizes component reuse, scalability, and adheres to best UX design patterns.
+        <h4>The primary objective of this design system is to center on the showcase of UX case studies. It's essential
+          that the overall design thinking structure is presented clearly and is user-friendly. Key information should
+          be displayed by default. While users should have the option to delve deeper if desired, the design should also
+          facilitate quick scanning without requiring excessive time spent on a single case study.
+
+
+
+
+
         </h4>
       </div>
     </div>
@@ -2652,7 +2659,7 @@
                   <label for="password">Password</label>
 
                   <input class="PWinput" type="password" id="password" placeholder="Enter password">
-  
+
                   <div class="pwIncorrectHeight">
                     <span id="pwIncorrect">Password is incorrect </span>
                   </div>
@@ -3618,11 +3625,13 @@
                   non blandit.</p>
 
 
-                  <h5> <strong> Subtitle </strong> </h5>
-                  <ul>
-                  <li class="listCircle">Pretium nibh ipsum consequat nisl vel pretium lectus quam id. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae. 
+                <h5> <strong> Subtitle </strong> </h5>
+                <ul>
+                  <li class="listCircle">Pretium nibh ipsum consequat nisl vel pretium lectus quam id. Tortor pretium
+                    viverra suspendisse potenti nullam ac tortor vitae.
                   </li>
-                  <li class="listCircle">Viverra orci sagittis eu volutpat odio facilisis mauris. Eleifend donec pretium vulputate sapien nec. Tortor condimentum lacinia quis vel eros.</li>
+                  <li class="listCircle">Viverra orci sagittis eu volutpat odio facilisis mauris. Eleifend donec pretium
+                    vulputate sapien nec. Tortor condimentum lacinia quis vel eros.</li>
                 </ul>
 
                 <div class="blankHXS"></div>
