pw & new project

--- a/application_info/index.html
+++ b/application_info/index.html
@@ -181,7 +181,7 @@
                 <div>
                   <img src="../image/Cover_portfolioWeb.png" alt="Design System">
                   <div class="element">
-                    <h5 class="colorBlack">Design System |  Efficiently Bulid &#38; Maintain Components</h5>
+                    <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
                 </div>
               </a>
@@ -273,7 +273,7 @@
             <button class="ClipboardIconOnly">
               <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy WS to Clipboard"
                 src="../icon/LOGOCircle.svg">
-              <p class="clickIconCopy">https://vickywang.me/worksamples/xiaobaobeeii/
+              <p class="clickIconCopy">https://vickywang.me/worksamples/lshbeexbb/
               </p>
             </button>
           </div>
@@ -291,7 +291,7 @@
                 <p>My name is Vicky, and I am a UX designer with experience designing both business-facing web
                   applications and consumer-oriented mobile apps. I invite you to view some of my work on our B2B web
                   app
-                  at [https://vickywang.me/worksamples/xiaobaobeeii/].</p>
+                  at [https://vickywang.me/worksamples/lshbeexbb/].</p>
                 <p>At BookYourPet, where I have been an integral team member for the past two years, our mission is to
                   offer pet business owners an efficient tool for managing their operations. Our platform aims to
                   streamline appointment management processes, with key features that include team member shift
@@ -375,7 +375,7 @@
       <div class="ClickandCopy">Password</div>
 
       <div class="copy-text">
-        <input type="text" class="text" value="hazel-print-wrist" />
+        <input type="text" class="text" value="probable-concern-mix" />
 
         <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
         </button>
@@ -385,7 +385,7 @@
       <div class="ClickandCopy">Work Samples</div>
 
       <div class="copy-text">
-        <input type="text" class="text" value="https://vickywang.me/worksamples/xiaobaobeeii/" />
+        <input type="text" class="text" value="https://vickywang.me/worksamples/lshbeexbb/" />
 
         <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
         </button>
@@ -432,7 +432,7 @@
               <p>Below are my resume and work samples:</p>
               <p>Resume: https://vickywang.me/resumeWS.pdf</p>
               <p>Portfolio: https://vickywang.me/ </p>
-              <p>Work samples: https://vickywang.me/worksamples/xiaobaobeeii/</p>
+              <p>Work samples: https://vickywang.me/worksamples/lshbeexbb/</p>
             </button>
           </div>
         </div>
