--- a/index.html
+++ b/index.html
@@ -315,30 +315,10 @@
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
-          <div class="Grid-cell">
-            <div class="element">
-              <a href="/lasohealth/">
-                <div class="">
-                  <div class="elementCard float cardBorder GLORIFY shadowBoxLt">
-                    <img src="./image/Cover_RxZero.png" alt="GLORIFY">
-                    <div class="element">
-                      <div class="element">
-                        <h5>For purchase medication</h5>
-                        <h3 class="arrCard" data-aos="fade-up"><strong>LASO RX Zero</strong></h3>
-                        <h4>Elevate medication purchase experience with unlimited access to generics</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
           <div class="element">
             <a href="/glorify/">
               <div class="">
-                <div class="elementCard float cardBorder GLORIFY shadowBoxLt">
+                <div class="elementCard GLORIFY float cardBorder  shadowBoxLt">
                   <img src="./image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
                     <div class="element">
@@ -352,16 +332,12 @@
             </a>
           </div>
         </div>
-      </div>
-      <div class="Grid Grid--gutters Grid--cols-2">
-
-
         <div class="Grid-cell">
           <div class="element">
             <a>
-              <div class="elementCard float cardBorder shadowBoxLt">
+              <div class="elementCard LASO float cardBorder shadowBoxLt">
                 <div class="img__wrap">
-                  <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
+                  <img src="./image/Cover_RxZero.png" alt="LASO RX Zero">
                   <div class="img__description">
                     <div class="input-field">
                       <div class="column">
@@ -380,9 +356,9 @@
                   </div>
                   <div class="element zTop">
                     <div class="element">
-                      <h5>Password is required </h5>
-                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES</strong></h3>
-                      <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                      <h5>For purchasing generic medications</h5>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>LASO RX Zero</strong></h3>
+                      <h4>Elevate medication purchase experience with unlimited access to generics</h4>
                     </div>
                   </div>
                 </div>
