input shifts fixed

--- a/design_system/index.html
+++ b/design_system/index.html
@@ -2656,7 +2656,7 @@
 
 
                 <div class="column">
-                  <label for="password">Password</label>
+                  <label for="password"><h5>Password</h5></label>
 
                   <input class="PWinput" type="password" id="password" placeholder="Enter password">
 
