--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                   <div class="img__description">
                     <div class="input-field">
                       <div class="column">
-                        <label for="password">Password</label>
+                        <label for="password"><h5>Password</h5></label>
                         <input class="PWinputLanding" type="password" id="password" placeholder="Enter password">
 
                         <div class="pwIncorrectHeight">
