--- a/lasohealth/index.html
+++ b/lasohealth/index.html
@@ -9,7 +9,7 @@
 
   <meta name="title" content="Vicky W. | UX Designer | GLORIFY">
   <title>Vicky W. | UX Designer | GLORIFY </title>
-  <link rel="canonical" href="https://vickywang.me/glorify/">
+  <link rel="canonical" href="https://vickywang.me/ws">
   <meta name="author" content="Vicky W.">
   <!-- Basic Metadata -->
 
