--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
 
 
-    <div class="blankHXS"></div>
+    <div class="blankHS"></div>
     <!-- Arrow -->
     <div class="wrapper">
       <div class="element">
@@ -341,7 +341,9 @@
                   <div class="img__description">
                     <div class="input-field">
                       <div class="column">
-                        <label for="password"><h5>Password</h5></label>
+                        <label for="password">
+                          <h5>Password</h5>
+                        </label>
                         <input class="PWinputLanding" type="password" id="password" placeholder="Enter password">
 
                         <div class="pwIncorrectHeight">
@@ -451,7 +453,15 @@
       </div>
     </div>
 
-
+    <div class="blankHS"></div>
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="element">
+        <h2 class="tArrow">Skills & Experience Overview <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow">
+        </h2>
+      </div>
+    </div>
+    <!-- Arrow -->
 
     <!-- message -->
     <div class="blankHM"></div>
