--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -12,36 +12,39 @@
   <meta name="author" content="Vicky W.">
 
   <!-- Basic Metadata -->
-
   <meta name="keywords"
     content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-">
+  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
+  ">
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:locale" content="en_US">
-  <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | LACAMA" />
-  <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-  <meta property='og:url' content="https://vickywang.me" />
-  <meta property="og:site_name" content="Vicky's Website LACAMA">
-
-  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="627">
-  <meta property="og:image:type" content="image/jpeg">
-  <!-- linkedin -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@vickyw_design" />
-  <meta name="twitter:title" content="Vicky's Website" />
-  <meta name="twitter:description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
-  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
-  <meta name="twitter:url" content="//vickywang.me/">
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <!-- twitter -->
+    <!-- Open Graph / Facebook -->
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property='og:title' content="Vicky Wang | UX Designer | Thesis Studio" />
+    <meta property='og:description'
+      content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
+    <meta property='og:url' content="https://vickywang.me/architecture/LACAMA/" />
+    <meta property="og:site_name" content="Vicky's Website">
+  
+    <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+    <meta property="og:image:type" content="image/jpeg">
+    <!-- linkedin -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@vickyw_design" />
+    <meta name="twitter:title" content="Vicky's Website" />
+    <meta name="twitter:description"
+      content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
+    <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
+    <meta name="twitter:url" content="//vickywang.me/">
+    <meta name="twitter:creator" content="VICKY WANG" />
+    <!-- twitter -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
+    <!-- favicon -->
 
 
 
@@ -87,15 +90,7 @@
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript" src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-  <!-- gsap -tool-bar-->
-  <script type="text/javascript" src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-  <!-- gsap - tool-bar-->
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
+  
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
   <script>
