--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -21,10 +21,10 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property='og:title' content="Vicky Wang | UX Designer | GLORIFY" />
+    <meta property='og:title' content="Vicky Wang | UX Designer | Thesis Studio" />
     <meta property='og:description'
       content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-    <meta property='og:url' content="https://vickywang.me" />
+    <meta property='og:url' content="https://vickywang.me/architecture/thesis_studio/" />
     <meta property="og:site_name" content="Vicky's Website">
   
     <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
