--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
   <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="scripts_project.js"></script>
 
+
+
+
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -337,7 +340,7 @@
             <a>
               <div class="elementCard LASO float cardBorder shadowBoxLt">
                 <div class="img__wrap">
-                  <img src="./image/Cover_RxZero.png" alt="LASO RX Zero">
+                  <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
                   <div class="img__description">
                     <div class="input-field">
                       <div class="column">
@@ -356,11 +359,11 @@
                       </button>
                     </div>
                   </div>
-                  <div class="element zTop">
+                  <div class="element">
                     <div class="element">
-                      <h5>For purchasing generic medications</h5>
-                      <h3 class="arrCard" data-aos="fade-up"><strong>LASO RX Zero</strong></h3>
-                      <h4>Elevate medication purchase experience with unlimited access to generics</h4>
+                      <h5>Password is required </h5>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES</strong></h3>
+                      <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
                     </div>
                   </div>
                 </div>
@@ -462,6 +465,62 @@
       </div>
     </div>
     <!-- Arrow -->
+    <div class="blankHM"></div>
+
+    <div class="Grid Grid--full u-textCenter">
+
+        <ul class="tags">
+
+          <li class="tag"><span class="box"> Experience Design</span></li>
+          <li class="tag"><span class="box"> User Experience Design </span></li>
+          <li class="tag"><span class="box"> User Interface Design</span></li>
+          <li class="tag"><span class="box"> Product Design</span></li>
+          <li class="tag"><span class="box"> Design Thinking</span></li>
+          <li class="tag"><span class="box"> User-centered Design</span></li>
+
+
+          
+          <li class="tag"><span class="box"> Responsive Web Design</span></li>
+          <li class="tag"><span class="box"> Web Application Design</span></li>
+          <li class="tag"><span class="box"> Design Systems</span></li>
+          <li class="tag"><span class="box"> Graphic Design</span></li>
+
+          <li class="tag"><span class="box"> UX Research</span></li>
+          <li class="tag"><span class="box">Design Research</span></li>
+          <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
+
+
+          <li class="tag"><span class="box"> User Interface Prototyping</span></li>
+          <li class="tag"><span class="box"> Wireframing</span></li>
+          <li class="tag"><span class="box"> Prototyping</span></li>
+
+
+
+          <li class="tag"><span class="box"> Figma</span></li>
+
+          <li class="tag"><span class="box"> Adobe Photoshop</span></li>
+          <li class="tag"><span class="box"> Adobe Illustrator</span></li>
+
+
+          <li class="tag"><span class="box">Concept Testing</span></li>
+          <li class="tag"><span class="box">Usability Testing</span></li>
+
+
+          <li class="tag"><span class="box"> 3D Modeling</span></li>
+
+
+
+
+          <li class="tag"><span class="box">HTML</span></li>
+          <li class="tag"><span class="box">CSS</span></li>
+          <li class="tag"><span class="box">JavaScript</span></li>
+          <li class="tag"><span class="box">GitHub</span></li>
+
+        </ul>
+      </div>
+
+    </div>
+    <div class="blankHM"></div>
 
     <!-- message -->
     <div class="blankHM"></div>
