--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
     <!-- Arrow -->
     <div class="wrapper">
       <div class="element">
-        <h2 class="tArrow">Skills & Experience Overview <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow">
+        <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow">
         </h2>
       </div>
     </div>
