--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1079,7 +1079,7 @@
                   <div class="blankHXS"></div>
 
                 </div>
-                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More &#8744;</button>
+                <button class="toggle buttonTextOnly Glorify">Read More &#8744;</button>
               </div>
             </div>
           </div>
@@ -1174,7 +1174,7 @@
                   <div class="blankHXS"></div>
 
                 </div>
-                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More &#8744;</button>
+                <button class="toggle buttonTextOnly Glorify">Read More &#8744;</button>
               </div>
             </div>
           </div>
@@ -1263,7 +1263,7 @@
                   <div class="blankHXS"></div>
                 </div>
 
-                <button class="buttonTextOnly Glorify" onclick="toggleContent(this)">Read More &#8744;</button>
+                <button class="toggle buttonTextOnly Glorify">Read More &#8744;</button>
               </div>
             </div>
           </div>
