--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
+
+
         <a href="http://vickywang.me/"><img class="logo pointer" src="./icon/LOGO.svg" alt="VW"
             title="vickywang.me"></a>
         <div class="navbar">
@@ -469,55 +471,55 @@
 
     <div class="Grid Grid--full u-textCenter">
 
-        <ul class="tags">
+      <ul class="tags">
 
-          <li class="tag"><span class="box"> Experience Design</span></li>
-          <li class="tag"><span class="box"> User Experience Design </span></li>
-          <li class="tag"><span class="box"> User Interface Design</span></li>
-          <li class="tag"><span class="box"> Product Design</span></li>
-          <li class="tag"><span class="box"> Design Thinking</span></li>
-          <li class="tag"><span class="box"> User-centered Design</span></li>
-
-
-          
-          <li class="tag"><span class="box"> Responsive Web Design</span></li>
-          <li class="tag"><span class="box"> Web Application Design</span></li>
-          <li class="tag"><span class="box"> Design Systems</span></li>
-          <li class="tag"><span class="box"> Graphic Design</span></li>
-
-          <li class="tag"><span class="box"> UX Research</span></li>
-          <li class="tag"><span class="box">Design Research</span></li>
-          <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
-
-
-          <li class="tag"><span class="box"> User Interface Prototyping</span></li>
-          <li class="tag"><span class="box"> Wireframing</span></li>
-          <li class="tag"><span class="box"> Prototyping</span></li>
+        <li class="tag"><span class="box"> Experience Design</span></li>
+        <li class="tag"><span class="box"> User Experience Design </span></li>
+        <li class="tag"><span class="box"> User Interface Design</span></li>
+        <li class="tag"><span class="box"> Product Design</span></li>
+        <li class="tag"><span class="box"> Design Thinking</span></li>
+        <li class="tag"><span class="box"> User-centered Design</span></li>
 
 
 
-          <li class="tag"><span class="box"> Figma</span></li>
+        <li class="tag"><span class="box"> Responsive Web Design</span></li>
+        <li class="tag"><span class="box"> Web Application Design</span></li>
+        <li class="tag"><span class="box"> Design Systems</span></li>
+        <li class="tag"><span class="box"> Graphic Design</span></li>
 
-          <li class="tag"><span class="box"> Adobe Photoshop</span></li>
-          <li class="tag"><span class="box"> Adobe Illustrator</span></li>
-
-
-          <li class="tag"><span class="box">Concept Testing</span></li>
-          <li class="tag"><span class="box">Usability Testing</span></li>
-
-
-          <li class="tag"><span class="box"> 3D Modeling</span></li>
+        <li class="tag"><span class="box"> UX Research</span></li>
+        <li class="tag"><span class="box">Design Research</span></li>
+        <li class="tag"><span class="box"> Collaborative Problem Solving</span></li>
 
 
+        <li class="tag"><span class="box"> User Interface Prototyping</span></li>
+        <li class="tag"><span class="box"> Wireframing</span></li>
+        <li class="tag"><span class="box"> Prototyping</span></li>
 
 
-          <li class="tag"><span class="box">HTML</span></li>
-          <li class="tag"><span class="box">CSS</span></li>
-          <li class="tag"><span class="box">JavaScript</span></li>
-          <li class="tag"><span class="box">GitHub</span></li>
 
-        </ul>
-      </div>
+        <li class="tag"><span class="box"> Figma</span></li>
+
+        <li class="tag"><span class="box"> Adobe Photoshop</span></li>
+        <li class="tag"><span class="box"> Adobe Illustrator</span></li>
+
+
+        <li class="tag"><span class="box">Concept Testing</span></li>
+        <li class="tag"><span class="box">Usability Testing</span></li>
+
+
+        <li class="tag"><span class="box"> 3D Modeling</span></li>
+
+
+
+
+        <li class="tag"><span class="box">HTML</span></li>
+        <li class="tag"><span class="box">CSS</span></li>
+        <li class="tag"><span class="box">JavaScript</span></li>
+        <li class="tag"><span class="box">GitHub</span></li>
+
+      </ul>
+    </div>
 
     </div>
     <div class="blankHM"></div>
@@ -551,53 +553,98 @@
   </main>
   <!--footer-->
   <footer class="GreyBg100">
-    <div class="blankHM"></div>
-    <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
-      <div class="Grid-cell">
-        <div class="element">
-          <h4> &#169; 2023 &#8212; VICKY WANG</h4>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
-          <div class="Grid-cell">
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly">
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full u-textCenter wrapper">
+      <a href="/" class=""><img class="widthXS" src="./icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+    </div>
 
-                <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
-                  title="Copy to Clipboard" src="./icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">vickyw.design@gmail.com</p>
-              </button>
-            </div>
+    <div class="Grid Grid--full u-textCenter wrapper">
+      <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+        <div class="Grid-cell">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly">
+
+              <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingXL borderRadiusMax"
+                title="Copy to Clipboard" src="./icon/mail.svg" alt="LinkedIn">
+              <p class="clickIconCopy">vickyw.design@gmail.com</p>
+            </button>
           </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
-            </a>
-          </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://github.com/vicky-wyq">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/git.svg" alt="GitHub"
-                title="GitHub">
-            </a>
-          </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
-            </a>
-          </div>
-          <div class="Grid-cell">
-            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-              <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/ins.svg" alt="Instagram"
-                title="Instagram">
-            </a>
-          </div>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
+          </a>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://github.com/vicky-wyq">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/git.svg" alt="GitHub" title="GitHub">
+          </a>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+          </a>
+        </div>
+        <div class="Grid-cell">
+          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+            <img class="iconS hoverGrey300 paddingXL borderRadiusMax" src="./icon/ins.svg" alt="Instagram"
+              title="Instagram">
+          </a>
         </div>
       </div>
     </div>
-    <div class="blankHM"></div>
-    <div class="blankPhone"></div>
-    <!--footer-->
+    <div class="blankHXS"></div>
+
+    <div class="Grid Grid--gutters Grid--cols-3 wrapper">
+      <div class="Grid-cell">
+        <h5> <strong> Project </strong> </h5>
+        <h5>Community on Glorify</h5>
+        <h5>Booking App Appointa</h5>
+        <h5>Business Dashboard SEER</h5>
+
+        <div class="blankHXS"></div>
+
+
+      </div>
+
+      <div class="Grid-cell">
+        <h5> <strong> Service </strong> </h5>
+
+        <h5>User experience design</h5>
+        <h5>User experience design</h5>
+        <h5>Design research</h5>
+        <h5>Web design & Implement</h5>
+        <h5>Branding design</h5>
+
+        <div class="blankHXS"></div>
+
+
+
+      </div>
+
+      <div class="Grid-cell">
+        <h5> <strong> About </strong> </h5>
+        <h5></h5>
+        <h5></h5>
+        <h5></h5>
+        <div class="blankHXS"></div>
+
+
+
+      </div>
+    </div>
+
+    <div class="blankHS"></div>
+    <div class="Grid Grid--full u-textCenter wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h4>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+  <!--footer-->
 
 
 
